# UrbanNav-Dataset-Dashboard

./: .gitignore  CLAUDE.md  README.md  __init__.py  __main__.py  annotate.py  app.py  dash_query.py  dashboard.py  loaders.py  pyproject.toml  query.py  types.py
core/: discovery.py  frames.py  parallel.py
curation/: __init__.py  __main__.py  build_lut.py  cli.py  database.py  datamodule.py  dataset.py  filters.py  ingest.py  poses.py  schema.sql
dash_queries/: __init__.py  caption_search.py  crosswalk.py  curation_overview.py  ego_velocity.py  filter_diagnostic.py  filter_examples.py  filtered_browse.py  object_presence.py  overview.py  pedestrian.py
dash_visualizers/: __init__.py  _common.py  detection.py  filter_summary.py  filter_timeline.py  image_grid.py  mask.py  table.py  trajectory.py
dashboard/: _video_io.py  app.py  clip.py  clip_playback.py  clip_trajectory.py  loaders.py
dashboard/queries/: __init__.py  caption_search.py  crosswalk.py  curation_overview.py  ego_velocity.py  filter_diagnostic.py  filter_examples.py  filtered_browse.py  object_presence.py  overview.py  pedestrian.py
dashboard/visualizers/: __init__.py  mask.py  (+6 more)
docs/: CROSSWALK.md  DESIGN.md  FILTERS.md
pipeline/: discovery.py  parallel.py  retrieval.py
queries/: __init__.py  caption_search.py  ego_velocity.py  object_presence.py  overview.py  pedestrian.py
stages/: __init__.py  base.py  caption.py  crosswalk.py  detect.py  embed.py  query.py  segment.py
tests/: test_lut_determinism.py
visualizers/: __init__.py  detection.py  image_grid.py  mask.py  table.py  trajectory.py
(+6 files in other folders)
